objects/Case.object
<CustomObject>
    <fields>
        <fullName>PMC_SS_PostInvestigationCause__c</fullName>
        <description>Select the most appropriate cause category and update throughout the investigation process as necessary</description>
        <label>Post Investigation Cause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adulteration</fullName>
                </value>
                <value>
                    <fullName>Bagging Issue</fullName>
                </value>
                <value>
                    <fullName>Complaint Dismissed</fullName>
                </value>
                <value>
                    <fullName>Crust</fullName>
                </value>
                <value>
                    <fullName>Customer Caused</fullName>
                </value>
                <value>
                    <fullName>Dust</fullName>
                </value>
                <value>
                    <fullName>Failure to Meet Specification</fullName>
                </value>
                <value>
                    <fullName>Fines</fullName>
                </value>
                <value>
                    <fullName>Foreign Contamination</fullName>
                </value>
                <value>
                    <fullName>Lumps</fullName>
                </value>
                <value>
                    <fullName>Multiple Factors</fullName>
                </value>
                <value>
                    <fullName>Set-up</fullName>
                </value>
                <value>
                    <fullName>Temperature</fullName>
                </value>
                <value>
                    <fullName>Treatment</fullName>
                </value>
                <value>
                    <fullName>Wet Product</fullName>
                </value>
                <value>
                    <fullName>Wrong Product</fullName>
                </value>
                <value>
                    <fullName>Other Reason</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_Potassium__c</fullName>
        <description>Percent of Potassium to blend</description>
        <label>Potassium %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Prior_OwnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prior_OwnerId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ProductDescription__c</fullName>
        <description>Brief description of the product request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ProductIssue__c</fullName>
        <description>Select a more specific problem with a product when Issue Reason &quot;Product Concern&quot; is selected.</description>
        <inlineHelpText>Select a more specific problem you are facing with the product.</inlineHelpText>
        <label>Product Issue</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adulteration</fullName>
                </value>
                <value>
                    <fullName>Bagging Issue</fullName>
                </value>
                <value>
                    <fullName>Complaint Dismissed</fullName>
                </value>
                <value>
                    <fullName>Crust</fullName>
                </value>
                <value>
                    <fullName>Dust</fullName>
                </value>
                <value>
                    <fullName>Failure to Meet Specifications</fullName>
                </value>
                <value>
                    <fullName>Fines</fullName>
                </value>
                <value>
                    <fullName>Foreign Contamination</fullName>
                </value>
                <value>
                    <fullName>Lumps</fullName>
                </value>
                <value>
                    <fullName>Multiple Factors</fullName>
                </value>
                <value>
                    <fullName>Other Reason</fullName>
                </value>
                <value>
                    <fullName>Set-up</fullName>
                </value>
                <value>
                    <fullName>Temperature</fullName>
                </value>
                <value>
                    <fullName>Treatment</fullName>
                </value>
                <value>
                    <fullName>Wet Product</fullName>
                </value>
                <value>
                    <fullName>Wrong Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_ProductLocation__c</fullName>
        <description>Enter location of product (typically the customer’s location). Need City, State, Country</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Location</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ProductNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ProductSegregated__c</fullName>
        <description>Enter comment regarding if or how the product is segregated, if applicable</description>
        <label>Product Segregated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_ProductType__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AFI</fullName>
                </value>
                <value>
                    <fullName>Commodity</fullName>
                </value>
                <value>
                    <fullName>Conventional</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Raw Materials</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_ProductionFacility__c</fullName>
        <description>Text field (255) Mosaic Production Facility in question</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Production Facility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_SS_QualityActionSummary__c</fullName>
        <description>Enter a brief summary of mitigation actions, RCA action items, and what was done with the affected product</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Quality Action Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_QualityFindingsSummary__c</fullName>
        <description>Enter a brief summary of investigation findings</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Quality Findings Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_SS_QualityStatus__c</fullName>
        <label>Quality Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Pricing / Costs (NA)</fullName>
                </value>
                <value>
                    <fullName>Awaiting Release of Claims (NA)</fullName>
                </value>
                <value>
                    <fullName>Awaiting Samples / Analysis / Inspection (NA)</fullName>
                </value>
                <value>
                    <fullName>Awaiting Shipment / Regulatory Information (NA)</fullName>
                </value>
                <value>
                    <fullName>Checklist &amp; Sample Delivery (SA)</fullName>
                </value>
                <value>
                    <fullName>Committee Judgement (SA)</fullName>
                </value>
                <value>
                    <fullName>Feedback &amp; Agreement (SA)</fullName>
                </value>
                <value>
                    <fullName>Investigation (NA / SA)</fullName>
                </value>
                <value>
                    <fullName>Mitigation (NA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_QuickCustomerSatisfaction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Toggle box checked if the quality case is considered closed with the customer.  Quality case may remain open while Mosaic internal investigation continues or follow up items are completed</description>
        <label>Quick Customer Satisfaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ReOpenReason__c</fullName>
        <label>Re-Open Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>New information</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Resolution Not Accurate</fullName>
                </value>
                <value>
                    <fullName>Resolution Not Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_ReadyForDeletion__c</fullName>
        <formula>IF((NOW()-  ClosedDate) &gt;=   VALUE($Label.PMC_SS_CaseRetentionPolicy)  , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ready For Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ReadyForMDM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready For MDM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_RebillAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Invoice Rebill Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_RegionalDirector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_RegionalManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To store Account Owner&apos;s Manager</description>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ReturnAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Return Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ReturnQuantity__c</fullName>
        <label>Return Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_RootCauseAnalysis__c</fullName>
        <description>Select applicable RCA status and update throughout the investigation process as necessary</description>
        <label>Root Cause Analysis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_RouteToQuality__c</fullName>
        <defaultValue>false</defaultValue>
        <description>States whether Quality Team needs to perform an investigation</description>
        <label>Route to Quality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SAPID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field should capture information such as: SAP invoice ID, order ID’s etc.</inlineHelpText>
        <label>SAP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SAPInvoiceNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SAPOrderNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SAP_CustomerNumber__c</fullName>
        <description>Number for Contact stored in SAP</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SAP Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if customer has opted out of SMS service</description>
        <label>SMS Opt-out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_AbatementContractNumber__c</fullName>
        <description>Only available when Reason is “Bonus/Rebate | 7”</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Abatement Contract Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_Business__c</fullName>
        <description>Business line of Customer</description>
        <label>Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>6</fullName>
                    <label>Bahamas</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Distribution</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Fospar</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>IFC</label>
                </value>
                <value>
                    <fullName>88</fullName>
                    <label>Jupiter</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Paraguay Mosaic</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Potássio Mineração</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Production</label>
                </value>
                <value>
                    <fullName>TBD</fullName>
                    <isActive>false</isActive>
                    <label>TBD</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Terras Brasil</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_CPR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_CenterToBeExpanded__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center to be Expanded</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Cases (Center to be expanded)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_CircularizationLetterDetails__c</fullName>
        <description>In this variable it is possible to write Information requested for the Circularization Letter request being performed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Circularization Letter Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_CircularizationLetterName__c</fullName>
        <description>Field to enter the name of solicitation of circularisation</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Circularization Letter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_ContractValue__c</fullName>
        <label>Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_CustomerCode__c</fullName>
        <description>7 digit customer code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_EndorsementValue__c</fullName>
        <description>Field displayed when Warranty Type = &quot;CPR Endorsement&quot;</description>
        <label>Endorsement Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_ExactDateToBePaid__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exact Date To Be Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_FinalDate__c</fullName>
        <description>Field visible when Type of Service = Advance Reports, Compensation reports, Billed and billable portfolio report, or Supplementary Invoice Report</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Final Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_FinancialOperationValue__c</fullName>
        <description>Field displayed when Warranty Type = &quot;CPR Disposal&quot; or &quot;Pledge&quot;</description>
        <label>Financial Operation Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_InitialDate__c</fullName>
        <description>Field visible when Type of Service = Advance Reports, Compensation reports, Billed and billable portfolio report, or Supplementary Invoice Report</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Initial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_InitialRequestPeriod__c</fullName>
        <description>Select the initial request period</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Initial Request Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_Mortage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mortage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_Mortgage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mortgage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_MosaicPayingReceivingCompany__c</fullName>
        <label>Mosaic Paying / Receiving Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>4090</fullName>
                    <label>4090 - Mosaic Distribuição</label>
                </value>
                <value>
                    <fullName>4110</fullName>
                    <label>4110 - Fospar</label>
                </value>
                <value>
                    <fullName>4115</fullName>
                    <label>4115 - Bahamas</label>
                </value>
                <value>
                    <fullName>4350</fullName>
                    <label>4350 - Paraguay Mosaic</label>
                </value>
                <value>
                    <fullName>4460</fullName>
                    <label>4460 - IFC</label>
                </value>
                <value>
                    <fullName>4550</fullName>
                    <label>4550 - Mosaic Potássio</label>
                </value>
                <value>
                    <fullName>4560</fullName>
                    <label>4560 - Mosaic P&amp;K</label>
                </value>
                <value>
                    <fullName>4570</fullName>
                    <label>4570 - Terras Brasil</label>
                </value>
                <value>
                    <fullName>4690</fullName>
                    <label>4690 - Jupiter</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_OrderNumberorContractNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order Number or Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_PayeeName__c</fullName>
        <description>Field displayed when Warranty Type = &quot;CPR Endorsement&quot;</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Payee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_Program__c</fullName>
        <description>Only available when Reason is “Bonus/Rebate | 7”</description>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Grow Crops</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>Others</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>7</fullName>
                    <label>Bonus/Rebate</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Contractual Fine</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Incident</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Intercompany</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Judicial Proceedings</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Others</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Reimbursement of Expenses</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Taxes and Fees</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_RecipientsofCirLetter__c</fullName>
        <description>Field to write the emails that will receive the Letter of Circularization, following the instructions. &quot;Enter the emails of External Customers here to receive information about the completion of this call;
For each e-mail provided, separate it with a comma (&quot;,&quot;), such as: joão@example.com, maria@example.com.&quot;.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Recipients of Circularization Letter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_RequestType__c</fullName>
        <description>Field to select the request type based on the ServiceNow Ticket Type</description>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advance Reports</fullName>
                </value>
                <value>
                    <fullName>Banking Intervention</fullName>
                </value>
                <value>
                    <fullName>Billed and billable portfolio report</fullName>
                </value>
                <value>
                    <fullName>Closing of Services Exchange</fullName>
                </value>
                <value>
                    <fullName>Compensation reports</fullName>
                </value>
                <value>
                    <fullName>Complementary Note</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Core Registration</label>
                </value>
                <value>
                    <fullName>CRA</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>Credit note</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Customer Registration</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>Debit note</label>
                </value>
                <value>
                    <fullName>Demurrage / Dispatch Closing</fullName>
                </value>
                <value>
                    <fullName>Discharge Receipt</fullName>
                </value>
                <value>
                    <fullName>Empty Factory</fullName>
                </value>
                <value>
                    <fullName>Enlargement of Registration to Another Center</fullName>
                    <label>Enlargement of Registration to Another Centerv</label>
                </value>
                <value>
                    <fullName>Export Exchange Closing</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Generate Billet</label>
                </value>
                <value>
                    <fullName>Import Exchange Closing</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Login and Password Unlock</label>
                </value>
                <value>
                    <fullName>MRO Exchange Closing</fullName>
                </value>
                <value>
                    <fullName>NDA Renewal</fullName>
                </value>
                <value>
                    <fullName>New NDA</fullName>
                </value>
                <value>
                    <fullName>New Product Registration</fullName>
                </value>
                <value>
                    <fullName>Premium Products</fullName>
                </value>
                <value>
                    <fullName>Product Registration in MIC</fullName>
                </value>
                <value>
                    <fullName>Receipt Composition</fullName>
                </value>
                <value>
                    <fullName>Registration Change</fullName>
                </value>
                <value>
                    <fullName>Replan</fullName>
                </value>
                <value>
                    <fullName>Return of Values</fullName>
                </value>
                <value>
                    <fullName>Scrap Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_SalesforceIncidentNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Salesforce Incident Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_SegmentManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_ServiceNowTicketNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ServiceNow Ticket Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_ServiceNowTicketSyncId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ServiceNow Ticket Sync Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_StatusLabel__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Now Status Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_StatusValue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ServiceNow Status Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>